--- a/improv-series.html
+++ b/improv-series.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Julia Crosara, Abstract Painter, Breaking Free Series</title>
+    <title>Julia Crosara, Abstract Painter, Improvisation Series</title>
 
     <!-- Boostrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -31,7 +31,7 @@
 		
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="jumbotron-heading">Breaking Free Series</h1>
+        <h1 class="jumbotron-heading">Improvisation Series</h1>
         <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officia explicabo quibusdam est nemo, aliquam suscipit iure atque. A, dolorum.
         </p>
         <p>
@@ -40,7 +40,6 @@
         </p>
       </div>
     </section>
-
     
     <main role="main">
 			
@@ -48,31 +47,22 @@
 			<div class="container py-4">
 	
         <!-- thumbnails -->
-          <div class="thumbnails group">
+        <div class="thumbnails improv group">
 
-              <a href="images/bf/bf1-full.jpg" class=img-fluid data-lightbox="gallery" data-title="Breaking Free">
-                <img src="images/bf/bf1-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
+            <a href="images/improv/improv4.jpg" class=img-fluid data-lightbox="gallery" data-title="Improvisation Series">
+              <img src="images/improv/improv4.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-              <a href="images/bf/bf2.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf2-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
+            <a href="images/improv/improv3.jpg" class=img-fluid data-lightbox="gallery"
+              data-title="Improvisation Series">
+              <img src="images/improv/improv3.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-              <a href="images/bf/bf3.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf3-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
+            <a href="images/improv/improv2.jpg" class=img-fluid data-lightbox="gallery"
+              data-title="Improvisation Series">
+              <img src="images/improv/improv2.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-               <a href="images/bf/bf4-full.jpg" data-lightbox="gallery">
-                 <img src="images/bf/bf4-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
-
-              <a href="images/bf/bf5.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf5-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
-
-              <a href="images/bf/bf6.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf6-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
-<!-- 
-              <a href="images/bf/bf7.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf7-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
-
-              <a href="images/bf/bf8.jpg" data-lightbox="gallery">
-                <img src="images/bf/bf8-sq.jpg" alt="Abstract painting by Julia Crosara"></a> -->
+            <a href="images/improv/improv1.jpg" class=img-fluid data-lightbox="gallery"
+              data-title="Improvisation Series">
+              <img src="images/improv/improv1.jpg" alt="Abstract painting by Julia Crosara"></a>
 
           </div><!-- /thumbnails -->
 
