--- a/about.html
+++ b/about.html
@@ -56,10 +56,11 @@
   <main role="main">
 
     <!-- header -->
-      <div class="container mt-5">
-          <h1 class="text-info">Welcome to my abstract world</h1>
-          <p>My approach to painting is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Each painting is comprised of many layers, which adds depth and complexity to the work. The process is dynamic, experiential, and full of surprises. </p>
-      </div>
+    <div class="container mt-5">
+        <h1 class="text-info">Welcome to my abstract world</h1>
+        <p>My approach to painting is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Each painting is comprised of many layers, which adds depth and complexity to the work. The process is dynamic, experiential, and full of surprises. 
+        </p>
+    </div>
 
       <!-- new layout -->
       <div class="container">
@@ -72,7 +73,7 @@
                       <a href="improv-series.html">
                         <h4>Improvisation Series</h4>
                       </a>
-                        <p class="card-text">Paintings inspired by listening to jazz improvisation.</p>
+                        <p class="card-text">A group of paintings that were inspired by listening to jazz improvisation</p>
                     </div>
                 </div>
             </div>
@@ -81,20 +82,20 @@
                     <img class="card-img-top" src="images/bf/bf1-mantle.jpg" alt="Card image cap">
                     <div class="card-body">
                         <a href="breaking-free.html">
-                          <h4>Breaking Free</h4>
+                          <h4>Breaking Free Series</h4>
                         </a>
-                          <p class="card-text">Randomness played a central role in this series.</p>
+                          <p class="card-text">Randomness played a central role and the images that came to light were startling at times.</p>
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
-                    <img class="card-img-top mr-0" src="images/preludio/preludio1-sq.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="images/preludio/preludio1-sq.jpg" alt="Card image cap">
                     <div class="card-body">
                        <a href="preludio.html">
                           <h4>Preludio Flamenco</h4>
                         </a>
-                          <p class="card-text">Jazz video project that features nine of my abstract paintings</p>
+                          <p class="card-text">Video project that features nine of my abstract paintings</p>
                     </div>
                 </div>
             </div>
@@ -105,7 +106,7 @@
                        <a href="misc.html">
                           <h4>Eclectic Mix</h4>
                         </a>
-                          <p class="card-text">Recent paintings that defy categorization</p>
+                          <p class="card-text">A collection of recent paintings that defy categorization</p>
                     </div>
                 </div>
             </div>
@@ -113,7 +114,7 @@
                 <div class="card h-100">
                     <img class="card-img-top" src="images/preludio/preludio3-sq.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <a href="nature.html">
+                        <a href="misc.html">
                           <h4>Nature Inspired</h4>
                         </a>
                           <p class="card-text">Various interpretations of land and sea</p>
@@ -124,7 +125,9 @@
                 <div class="card h-100">
                    <img class="card-img-top" src="images/jc-hands.jpg" alt="Card image cap">
                     <div class="card-body">
+                        <a href="">
                           <h4>About</h4>
+                        </a>
                           <p class="card-text">Julia's artistic development and painting process</p>
                     </div>
                 </div>
@@ -133,7 +136,8 @@
         </div><!-- end row -->
       </div><!-- /new layout -->
 
-    <footer id="contact" class="bg-dark mt-5">
+
+  <footer id="contact" class="bg-dark mt-5">
       <button type="button" class="btn btn-danger m-3 p-3">
         <a href="mailto:info@juliacrosara.com" target="blank">Send Email</a> 
       </button>
