--- a/preludio.html
+++ b/preludio.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Julia Crosara, Abstract Painter, Preludio Flamenco Project</title>
+  <title>Julia Crosara, Abstract Painter, Preludio Flamenco</title>
 
   <!-- Boostrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -16,6 +16,7 @@
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
 
   <!-- Custom styles -->
   <link rel="stylesheet" href="css/screen.css">
@@ -29,14 +30,56 @@
 
 <body>
 
-  <div class="title p-4 text-center">
-    <a href="index.html">
-      <h1>JULIA CROSARA<span class="art m-2">preludio flamenco</span>
-      </h1>
-    </a>
+  <div class="bg-dark">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark pl-0">
+          <a class="navbar-brand" href="index.html">JULIA CROSARA</a><span class="art ml-0">ART</span>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">galleries<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">about</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+    </div>
   </div>
 
   <main role="main">
+
+
+    <!-- header -->
+    <div class="container">
+      <h1 class="text-info mt-5">Preludio Flamenco Project</h1>
+      <div class="container text-justify p-5 pf-bg">
+        <p class="mx-3"><strong>Preludio Flamenco</strong> is a musical and visual journey through Spanish jazz and abstract art. Original composition by Francesco Crosara and abstract paintings by Julia Crosara.</p>
+
+            <!-- iframe -->
+      <div class="video-reponsive container py-3 text-center">
+
+        <iframe width="640" height="385" src="https://www.youtube.com/embed/PEK8pihSNX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+        <p class="mx-3">Featuring Francesco Crosara (piano), Dave Murdy (guitar), Farko Dosumov (bass), Mark Ivester (drums), Malo Castro (percussion).
+        Recorded at each musician's individual home between May 30th and July 4th, 2020.
+        Video editing and audio mastering by Francesco Crosara.</p>
+
+        <p class="mx-3">The paintings seen in the video are featured below.</p>
+
+       
+      </div>
+
+    </div>
+
 
     <!-- container -->
     <div class="container py-4">
@@ -44,64 +87,52 @@
       <!-- thumbnails -->
       <div class="thumbnails group">
 
-        <a href="images/preludio/preludio9.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio9.jpg" data-lightbox="gallery"  data-title="©2020, Julia Crosara, <i>Somewhere Down the Road</i>, acrylic on paper, 6x7.5 inches">
           <img src="images/preludio/preludio9-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio1.jpg" class=img-fluid data-lightbox="gallery" data-title="Breaking Free">
+        <a href="images/preludio/preludio1.jpg" class=img-fluid data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Spain</i>, acrylic on canvas, 20x16 inches">
           <img src="images/preludio/preludio1-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio4.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio4.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Improvisation 4</i>, acrylic on cradled wood panel, 10x10 inches">
          <img src="images/preludio/preludio4-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio2.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio2.jpg" data-lightbox="gallery"  data-title="©2020, Julia Crosara, <i>Portrait</i>, acrylic on canvas, 20x16 inches">
           <img src="images/preludio/preludio2-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio3.jpg" data-lightbox="gallery">
-        <img src="images/preludio/preludio3-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
+        <a href="images/preludio/preludio3.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Into the Sea</i>, acrylic on cradled wood panel, 10x10 inches">
+          <img src="images/preludio/preludio3-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio5.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio5.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Breaking Free III</i>, acrylic on paper, 6x7.5 inches">
           <img src="images/preludio/preludio5-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio6.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio6.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>First Impressions</i>, acrylic on cradled wood, 12x12 inches">
           <img src="images/preludio/preludio6-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio7.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio7.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Breaking Free No. 5</i>, acrylic on paper, 6x7.5 inches">
           <img src="images/preludio/preludio7-sq.jpg" alt="Abstract painting by Julia Crosara"></a>
 
-        <a href="images/preludio/preludio8.jpg" data-lightbox="gallery">
+        <a href="images/preludio/preludio8.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>The Tide Retreats</i>, acrylic on cradled wood panel, 10x10 inches">
           <img src="images/preludio/preludio8-sm.jpg" alt="Abstract painting by Julia Crosara"></a>
         
       </div><!-- /thumbnails -->
 
     </div><!-- /container -->
 
-    <div class="about pt-3 mt-5">
-      <div class="container p-4">
-        <p class="text-justify p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, nemo voluptate
-          quas voluptas soluta quasi tempora alias? Quis tempore explicabo doloremque. Distinctio corporis mollitia
-          adipisci cum sequi architecto officiis placeat!</p>
-      </div>
-    </div>
+    <footer id="contact" class="bg-dark mt-5">
+      <button type="button" class="btn btn-danger m-3 p-3">
+        <a href="mailto:info@juliacrosara.com" target="blank">Send Email</a> 
+      </button>
 
-  <!-- iframe -->
+      <button type="button" class="btn btn-warning m-3 p-3">
+        <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
+      </button>
 
-    <div class="text-center p-3 my-4 email">
-      <a href="mailto: info@juliacrosara.com">
-        info@juliacrosara.com</a>
-    </div>
+      <button type="button" class="btn btn-info m-3 p-3">
+        <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
+      </button>
 
-    <div class="text-center p-3 mb-4 insta">
-      <a href="https://www.instagram.com/julia.crosara.art/" target="blank">
-        instagram.com/julia.crosara.art</a>
-    </div>
+      <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
-    <div class="text-center p-3 mb-4 saatchi">
-      <a href="https://www.saatchiart.com/juliacrosara" target="blank">
-        saatchiart.com/juliacrosara</a>
-    </div>
-
-    <footer>
-      <p>&copy; 2020 Original artwork & web design by Julia Crosara </p>
     </footer>
 
   </main
