--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="index.html">galleries<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="">about</a>
               </li>
               <li class="nav-item">
@@ -57,9 +57,11 @@
 
     <!-- header -->
     <div class="container mt-5">
-        <h1 class="text-info">Welcome to my abstract world</h1>
-        <p>My approach to painting is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Each painting is comprised of many layers, which adds depth and complexity to the work. The process is dynamic, experiential, and full of surprises. 
-        </p>
+         <!-- about-jc-quote -->
+        <div class="container">
+            <h3 class="lead">Julia’s use of color and form is bold and vibrant. She creates new pieces with the spontaneity and determination akin to jazz improvisation. The images jump out of the canvas, the nuances demand attention, and best of all, the meaning of each painting is left to the subjective imagination of the viewer.</h3>
+        </div> 
+      </p>
     </div>
 
       <!-- new layout -->
@@ -146,9 +148,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
 
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
