--- a/breaking-free.html
+++ b/breaking-free.html
@@ -59,7 +59,7 @@
     <!-- header -->
     <div class="container mt-5">
         <h1 class="text-info">Breaking Free Series</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint quis ad ullam tempore incidunt. Ratione ipsum tempora magnam natus sapiente, amet, eveniet quidem accusamus explicabo architecto, deserunt neque pariatur impedit.
+        <p>To reinvigorate my practice, I experimented with new ways of interacting with the materials, e.g., randomly pour paint, smush two art pieces together, and then hastily pull them apart. The images that surfaced were startling at times.
         </p>
     </div>
 
@@ -106,9 +106,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
       
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
