--- a/improv-series.html
+++ b/improv-series.html
@@ -57,9 +57,11 @@
   <main role="main">
       
     <!-- header -->
-    <div class="container mt-5">
-        <h1 class="text-info">Improvisation Series</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus consequatur libero similique cum nihil blanditiis asperiores laborum delectus, veritatis repellendus nisi animi aliquam nulla reprehenderit sequi quam fuga amet optio.</p>
+    <div class="container mt-5 pl-3">
+        <h1 class="text-info mb-4">Improvisation Series</h1>
+        <p>Listening to my husband, Francesco, play <a href="https://www.francescojazz.com" target="blank">jazz piano</a> and improvise with his whole being is inspiring and stirs my soul.
+        On a sunny afternoon this past summer, I pulled out my paints while he was practicing and let the music take me away.</p>
+        </div>
     </div>
 
 			<!-- container -->
@@ -90,6 +92,11 @@
 
         </div><!-- /thumbnails -->
 
+        <!-- <div class="jazz text-center bg-warning w-100 p-3">
+          Visit Francesco's website:<a href="https://www.francescojazz.com" target="blank">
+        FrancescoJAZZ</a>
+        </div> -->
+
       </div><!-- /container -->	
 
     <footer id="contact" class="bg-dark mt-5">
@@ -101,9 +108,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
 
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
