--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
   <div class="bg-dark">
-    <div class="container">
+    <div class="container text-left">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark pl-0">
           <a class="navbar-brand" href="index.html">JULIA CROSARA</a><span class="art ml-0">ART</span>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,8 +57,8 @@
 
     <!-- header -->
       <div class="container mt-5">
-          <h1 class="text-info">Welcome to my abstract world</h1>
-          <p>My approach to painting is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Each painting is comprised of many layers, which adds depth and complexity to the work. The process is dynamic, experiential, and full of surprises. </p>
+          <h1 class="text-info pl-1">Welcome to my abstract world</h1>
+          <p class="welcome pl-1">My approach to painting is playful, spontaneous, and rooted in the present. I begin each session with an open mind and respond to the materials in the moment. Painting surfaces are comprised of many layers and show evidence of prior mark making and experimentation. The process is dynamic, experiential, and full of surprises.</p>
       </div>
 
       <!-- new layout -->
@@ -125,12 +125,13 @@
                    <img class="card-img-top" src="images/jc-hands.jpg" alt="Card image cap">
                     <div class="card-body">
                           <h4>About</h4>
-                          <p class="card-text">Julia's artistic development and painting process</p>
+                          <p class="card-text">Julia's artistic development (in progress)</p>
                     </div>
                 </div>
             </div>
 
         </div><!-- end row -->
+
       </div><!-- /new layout -->
 
     <footer id="contact" class="bg-dark mt-5">
@@ -142,9 +143,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
 
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
