--- a/preludio.html
+++ b/preludio.html
@@ -63,7 +63,7 @@
       <div class="container text-justify p-5 pf-bg">
         <p class="mx-3"><strong>Preludio Flamenco</strong> is a musical and visual journey through Spanish jazz and abstract art. Original composition by Francesco Crosara and abstract paintings by Julia Crosara.</p>
 
-            <!-- iframe -->
+      <!-- iframe -->
       <div class="video-reponsive container py-3 text-center">
 
         <iframe width="640" height="385" src="https://www.youtube.com/embed/PEK8pihSNX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -73,16 +73,35 @@
         Recorded at each musician's individual home between May 30th and July 4th, 2020.
         Video editing and audio mastering by Francesco Crosara.</p>
 
-        <p class="mx-3">The paintings seen in the video are featured below.</p>
-
-       
+        <p class="mx-3">The paintings seen in the video are <a href="#artwork"><strong>featured below</strong>.</a></p>
       </div>
 
+    <!-- article -->
+    <div class="container article">
+      <div class="container text-justify p-5">
+        <p class="mx-3"><p><i>Francesco wrote about the project in a recent blog post:</i></p>
+
+        <h3 class="text-left">Abstract art and Jazz improvisation: Making it personal in the age of the pandemic </h3>
+        <p>By Francesco Crosara</p>
+        <p>We live in strange and dramatic times.  The new normal for live music and the fine arts has physically separated performers and artists from the audience.  A wave of cancelled public events was replaced by music in the living room and online performances with no public present.  The pandemic may have restricted movement, but not creativity.  Paradoxically, there are now more opportunities for collaborations than ever before, boosted by more affordable video editing tools, communication technology, and audience reached through social media.  Suddenly, the world is now the main stage for musicians and artists alike.</p>
+
+        <p>This new reality has deeply influenced my current musical approach, as well as the artistic inspiration and creative concepts of my spouse, Julia Crosara. From my personal observation, Julia’s use of color and form is bold and vibrant, she creates new pieces with the spontaneity and determination akin to jazz improvisation.  The images jump out of the canvas, the nuances demand attention, and best of all, the meaning of each painting is left to the subjective imagination of the viewer.</p>
+
+        <p>It was only a matter of time before Julia and I would collaborate on a creative project.  The opportunity presented itself in early summer during the lockdown, in the midst of a highly creative time for both of us. While I was writing a new composition, Preludio Flamenco, she was creating a series of fresh abstract paintings. Every day we shared notes and inspired each other’s work. It quickly became apparent that the collaborative moment had arrived.</p>
+
+        <p>The new Preludio Flamenco project required a bold, multi-dimensional approach.  As the song took shape thanks to the enthusiastic virtual collaboration with some of the best musical talent in Seattle and Los Angeles, I selected nine of Julia’s recent abstract pieces to incorporate into each scene in the video. Art and music blended perfectly. Each painting reflected the surroundings of the individual musician being featured.  The art itself came alive through video transitions as if dancing with the Latin jazz groove.  The 8-minute music video was selected to appear at the Earshot Jazz Festival as part of the Second Century series and will be broadcast on October 21st.</p>
+
+        <p class="pb-3">This is just the beginning of future joint projects with Julia.  Abstract art and Jazz improvisation: two unique worlds that blend together beautifully. </p>
+
+        <i>Visit Francesco's website to learn more about his work: <a href="https://www.francescojazz.com" target="blank">www.francescojazz.com</a></i>
+
+      </div>
+    </div><!-- end article container -->
+      
     </div>
 
-
     <!-- container -->
-    <div class="container py-4">
+    <div id="artwork" class="container py-4">
 
       <!-- thumbnails -->
       <div class="thumbnails group">
@@ -127,9 +146,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
 
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
