--- a/misc.html
+++ b/misc.html
@@ -59,8 +59,8 @@
         <!-- header -->
     <div class="container mt-5">
         <h1 class="text-info">Eclectic Mix</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id officia laborum, cupiditate tenetur blanditiis dicta libero corporis atque quae, suscipit, similique architecto. Similique, consequatur eaque odio beatae expedita deleniti illum.
-        </p>
+        <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id officia laborum, cupiditate tenetur blanditiis dicta libero corporis atque quae, suscipit, similique architecto. Similique, consequatur eaque odio beatae expedita deleniti illum.
+        </p> -->
     </div>
 
     <!-- container -->
@@ -100,9 +100,9 @@
         <a href="https://www.instagram.com/julia.crosara.art/" target="blank">Instagram</a>
       </button>
 
-      <button type="button" class="btn btn-info m-3 p-3">
+      <!-- <button type="button" class="btn btn-info m-3 p-3">
         <a href="https://www.saatchiart.com/juliacrosara" target="blank">Saatchi Art</a>
-      </button>
+      </button> -->
 
       <p>&copy; 2020 Art & Design by Julia Crosara</p>
 
