--- a/breaking-free.html
+++ b/breaking-free.html
@@ -59,7 +59,8 @@
     <!-- header -->
     <div class="container mt-5">
         <h1 class="text-info">Breaking Free Series</h1>
-        <p>To reinvigorate my practice, I experimented with new ways of interacting with the materials, e.g., randomly pour paint, smush two art pieces together, and then hastily pull them apart. The images that surfaced were startling at times.
+        <p class="bf">In an effort to reinvigorate my painting practice and get unstuck, I started working with paint in novel ways and gave chance a leading role in the process. The technique I enjoyed the most involved randomly pouring paint on repurposed works on paper; indiscriminately pressing them together from different angles; and then hastily pulling them apart. <p>
+        <p class="bf"> The images that surfaced were startling at times and left me wondering if I was dialoguing with my subconscious mind. Speculation aside, I finished up the series with renewed confidence that I could, in fact, break free of inopportune creative blocks and self-imposed limitations.
         </p>
     </div>
 
@@ -74,7 +75,7 @@
               </a>
 
                <a href="images/bf/bf1.jpg" class=img-fluid data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Breaking Free I</i>, acrylic on paper, 6x7.5 inches">
-                <img src="images/bf/bf1-sq.jpg" alt="Abstract painting by Julia Crosara">
+                <img src="images/bf/bf1-mantle.jpg" alt="Abstract painting by Julia Crosara">
               </a>
 
               <a href="images/bf/bf3.jpg" data-lightbox="gallery" data-title="©2020, Julia Crosara, <i>Breaking Free II</i>, acrylic on paper, 6x7.5 inches">
