--- a/improv-series.html
+++ b/improv-series.html
@@ -59,7 +59,7 @@
     <!-- header -->
     <div class="container mt-5 pl-3">
         <h1 class="text-info mb-4">Improvisation Series</h1>
-        <p>Listening to my husband, Francesco, play <a href="https://www.francescojazz.com" target="blank">jazz piano</a> and improvise with his whole being is inspiring and stirs my soul.
+        <p>Listening to my spouse, Francesco, play jazz piano and improvise with his whole being is inspiring and stirs my soul.
         On a sunny afternoon this past summer, I pulled out my paints while he was practicing and let the music take me away.</p>
         </div>
     </div>
