--- a/preludio.html
+++ b/preludio.html
@@ -79,7 +79,7 @@
     <!-- article -->
     <div class="container article">
       <div class="container text-justify p-5">
-        <p class="mx-3"><p><i>Francesco wrote about the project in a recent blog post:</i></p>
+        <p class="mx-3"><p><i>Francesco wrote about the project in a recent blog post for the <a href="https://www.biartmuseum.org/blog/2020/abstract-art-and-jazz-improvisation/" target="blank">Bainbridge Museum of Art</a></i></p>
 
         <h3 class="text-left">Abstract art and Jazz improvisation: Making it personal in the age of the pandemic </h3>
         <p>By Francesco Crosara</p>
