--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="index.html">galleries<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">about</a>
+                <a class="nav-link" href="#contact">about</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">contact</a>
@@ -57,36 +57,15 @@
 
     <!-- header -->
       <div class="container mt-5">
-          <h1 class="text-info pl-1">Welcome to my abstract world</h1>
-          <p class="welcome pl-1">My approach to painting is playful, spontaneous, and rooted in the present. I begin each session with an open mind and respond to the materials in the moment. Painting surfaces are comprised of many layers and show evidence of prior mark making and experimentation. The process is dynamic, experiential, and full of surprises.</p>
+          <h1 class="text-info">Welcome to my abstract world</h1>
+          <p class="welcome">My approach to making art is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Surfaces are multilayered and show remnants of forgotten marks and splashes of color. The process is dynamic, experiential, and full of surprises. 
       </div>
 
       <!-- new layout -->
       <div class="container">
 
         <div class="row">
-            <div class="col-xl-4 col-sm-6 mt-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="images/improv/improv4-sm.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <a href="improv-series.html">
-                        <h4>Improvisation Series</h4>
-                      </a>
-                        <p class="card-text">Paintings inspired by listening to jazz improvisation.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-sm-6 mt-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="images/bf/bf1-mantle.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <a href="breaking-free.html">
-                          <h4>Breaking Free</h4>
-                        </a>
-                          <p class="card-text">Randomness played a central role in this series.</p>
-                    </div>
-                </div>
-            </div>
+
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
                     <img class="card-img-top mr-0" src="images/preludio/preludio1-sq.jpg" alt="Card image cap">
@@ -94,10 +73,23 @@
                        <a href="preludio.html">
                           <h4>Preludio Flamenco</h4>
                         </a>
-                          <p class="card-text">Jazz video project that features nine of my abstract paintings</p>
+                          <p class="card-text">Jazz video project that features nine abstract paintings</p>
                     </div>
                 </div>
             </div>
+
+            <div class="col-xl-4 col-sm-6 mt-4">
+                <div class="card h-100">
+                    <img class="card-img-top" src="images/bf/bf1-sq.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <a href="breaking-free.html">
+                          <h4>Breaking Free</h4>
+                        </a>
+                          <p class="card-text">An exercise in circumventing self-imposed limitations</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
                     <img class="card-img-top" src="images/misc/portrait-sq.jpg" alt="Card image cap">
@@ -109,6 +101,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
                     <img class="card-img-top" src="images/preludio/preludio3-sq.jpg" alt="Card image cap">
@@ -120,18 +113,28 @@
                     </div>
                 </div>
             </div>
+                        <div class="col-xl-4 col-sm-6 mt-4">
+                <div class="card h-100">
+                    <img class="card-img-top" src="images/improv/improv4-sm.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <a href="improv-series.html">
+                        <h4>Improvisation Series</h4>
+                      </a>
+                        <p class="card-text">Paintings inspired by listening to jazz improvisation</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
                    <img class="card-img-top" src="images/jc-hands.jpg" alt="Card image cap">
                     <div class="card-body">
-                          <h4>About</h4>
-                          <p class="card-text">Julia's artistic development (in progress)</p>
+                          <h4>About Julia</h4>
+                          <p class="card-text">I'm procrastinating on this section.</p>
                     </div>
                 </div>
             </div>
 
         </div><!-- end row -->
-
       </div><!-- /new layout -->
 
     <footer id="contact" class="bg-dark mt-5">
