--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- header -->
       <div class="container mt-5">
           <h1 class="text-info">Welcome to my abstract world</h1>
-          <p class="welcome">My approach to making art is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Surfaces are multilayered and show remnants of forgotten marks and splashes of color. The process is dynamic, experiential, and full of surprises. 
+          <!-- <p class="welcome">My approach to making art is playful and spontaneous. I start each painting session with an open mind and respond to the materials in the moment. Surfaces are multilayered and show remnants of forgotten marks and splashes of color. The process is dynamic, experiential, and full of surprises. </p> -->
       </div>
 
       <!-- new layout -->
@@ -67,8 +67,52 @@
         <div class="row">
 
             <div class="col-xl-4 col-sm-6 mt-4">
+              <div class="card h-100">
+                  <a href="nature.html">
+                    <img class="card-img-top" src="images/nature/peak-ascent-sq.jpg" alt="Card image cap">
+                  </a>
+                  <div class="card-body">
+                      <a href="nature.html">
+                      <h4>Nature Inspired</h4>
+                      </a>
+                      <p class="card-text">Various interpretations of land and sea</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
+                  <a href="improv-series.html">
+                    <img class="card-img-top" src="images/improv/improv4-sm.jpg" alt="Card image cap">
+                  </a>
+                    <div class="card-body">
+                      <a href="improv-series.html">
+                        <h4>Improvisation Series</h4>
+                      </a>
+                        <p class="card-text">Paintings inspired by listening to jazz improvisation</p>
+                    </div>
+                </div>
+            </div>
+          
+            <div class="col-xl-4 col-sm-6 mt-4">
+                <div class="card h-100">
+                  <a href="breaking-free.html">
+                    <img class="card-img-top" src="images/bf/bf1-sq.jpg" alt="Card image cap">
+                  </a>
+                    <div class="card-body">
+                        <a href="breaking-free.html">
+                          <h4>Breaking Free</h4>
+                        </a>
+                          <p class="card-text">An exercise in circumventing self-imposed limitations</p>
+                      </div>
+                  </div>
+              </div>
+
+          <div class="col-xl-4 col-sm-6 mt-4">
+                <div class="card h-100">
+                  <a href="preludio.html">
                     <img class="card-img-top mr-0" src="images/preludio/preludio1-sq.jpg" alt="Card image cap">
+                  </a>
                     <div class="card-body">
                        <a href="preludio.html">
                           <h4>Preludio Flamenco</h4>
@@ -80,20 +124,11 @@
 
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
-                    <img class="card-img-top" src="images/bf/bf1-sq.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <a href="breaking-free.html">
-                          <h4>Breaking Free</h4>
-                        </a>
-                          <p class="card-text">An exercise in circumventing self-imposed limitations</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-4 col-sm-6 mt-4">
-                <div class="card h-100">
+                  <a href="misc.html">
                     <img class="card-img-top" src="images/misc/portrait-sq.jpg" alt="Card image cap">
+                  </a>
                     <div class="card-body">
+
                        <a href="misc.html">
                           <h4>Eclectic Mix</h4>
                         </a>
@@ -101,35 +136,13 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-xl-4 col-sm-6 mt-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="images/preludio/preludio3-sq.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <a href="nature.html">
-                          <h4>Nature Inspired</h4>
-                        </a>
-                          <p class="card-text">Various interpretations of land and sea</p>
-                    </div>
-                </div>
-            </div>
-                        <div class="col-xl-4 col-sm-6 mt-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src="images/improv/improv4-sm.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <a href="improv-series.html">
-                        <h4>Improvisation Series</h4>
-                      </a>
-                        <p class="card-text">Paintings inspired by listening to jazz improvisation</p>
-                    </div>
-                </div>
-            </div>
+            
             <div class="col-xl-4 col-sm-6 mt-4">
                 <div class="card h-100">
                    <img class="card-img-top" src="images/jc-hands.jpg" alt="Card image cap">
                     <div class="card-body">
                           <h4>About Julia</h4>
-                          <p class="card-text">I'm procrastinating on this section.</p>
+                          <p class="card-text">Currently revising this section</p>
                     </div>
                 </div>
             </div>
